new background iamge

--- a/Proyecto Personal Website/misObjetivos.html
+++ b/Proyecto Personal Website/misObjetivos.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-        <header class="be">
+        <header>
             <nav class="top-menu">
                 <h1>Andrés Matarrita Miranda</h1>
                 <ul>
@@ -25,10 +25,26 @@
                 </ul>
             </nav>
         </header>
-        <footer id="footer-index">
+        <div id="body">
+            <div id="body-row">
+                <section id="solution" class="nube">
+                    <h1>La solución Solsoft</h1>
+                    <p>Bla bla bla</p>
+                </section>
+                <section id="development">
+                    <h1>La solución Solsoft</h1>
+                    <p>Bla bla bla</p>
+                </section>
+                <section id="latest-news">
+                    <h1>La solución Solsoft</h1>
+                    <p>Bla bla bla</p>
+                </section>
+            </div>
+        </div>
+        <footer id="footer-general">
 
             <h5>Andres Matarrita - 2023</h5>
-            <p>Primer Portafolio personalizado usando HTML,CSS y Bootstrap</p>
+
 
         </footer>
 </body>
