Se agregan nuevos contenedores y imagenes nuevas para la pagina de pasatiempos

--- a/Proyecto Personal Website/pasatiempos.html
+++ b/Proyecto Personal Website/pasatiempos.html
@@ -27,23 +27,30 @@
     </header>
     <div class="body">
         <div class="title">
-            <h1 class="title">Mis Objetivos</h1>
+            <h1 class="title">Mis Pasatiempos</h1>
         </div>
         <div class="body-row-OneColumn">
-            <section class="">
+            <section class="boxTwoRow">
+                <div class="cell medium-8" style="padding: 20px;">
+                    <div class="card-section">
+                        <h3>Ir al gimnasio</h3>
+                        <p>
+                        <h5>Ir al gimnasio para realizar hipertrofia de cierta manera para mi no es un pasatiempo,
+                            es algo que me encanta hacer 5 veces a la semana , llevo 6 años de hacerlo y es una de las
+                            mejores decisiones que he tomado para mi salud física y mental.
+                        </h5>
+                        </p>
+                    </div>
+                </div>
+
+            </section>
+            <section class="boxTwoRow">
                 <div class="cell medium-8" style="padding: 20px;">
                     <h4>Mis metas a futuro las cuales voy a cumplir son:</h4>
                     <p class="text-justify">
                     <ul>
                         <li>Voy a mejorar mi relación con Dios y ser una mejor persona, después de todo, Él es la máxima
-                            prioridad.</li>
-                        <li>Quiero graduarme a más tardar el próximo año para dedicarme a trabajar y ya no tener que ir
-                            a la universidad y gastar tiempo en los viajes de ida y vuelta.</li>
-                        <li>Quiero conseguir un trabajo estable remoto donde no sea necesario trasladarse.</li>
-                        <li>Más a futuro, quiero comprar mi propia casa.</li>
-                        <li>Quiero casarme con mi novia dentro de unos muy pocos años.</li>
-                        <li>Quiero vivir en paz y tener una felicidad constante.</li>
-                        <li>Quiero viajar y conocer muchos países junto a mi pareja.</li>
+                        </li>>
                     </ul>
                     </p>
                 </div>
