--- a/Proyecto Personal Website/misObjetivos.html
+++ b/Proyecto Personal Website/misObjetivos.html
@@ -30,8 +30,8 @@
             <h1 class="title">Mis Objetivos</h1>
         </div>
         <div class="body-row-OneColumn">
-            <section class="">
-                <div class="cell medium-8" style="padding: 20px;">
+            <section class="boxOneRow">
+                
                     <h4>Mis metas a futuro las cuales voy a cumplir son:</h4>
                     <p class="text-justify">
                     <ul>
@@ -46,8 +46,6 @@
                         <li>Quiero viajar y conocer muchos países junto a mi pareja.</li>
                     </ul>
                     </p>
-                </div>
-
             </section>
         </div>
     </div>
