--- a/Proyecto Personal Website/pasatiempos.html
+++ b/Proyecto Personal Website/pasatiempos.html
@@ -25,14 +25,15 @@
             </ul>
         </nav>
     </header>
-    <div class="body">
-        <div class="title">
-            <h1 class="title">Mis Pasatiempos</h1>
-        </div>
-        <div class="body-row-OneColumn">
-            <section class="boxTwoRow">
-                <div class="cell medium-8" style="padding: 20px;">
+    <main>
+        <div class="body">
+            <div class="title">
+                <h1 class="title">Mis Pasatiempos</h1>
+            </div>
+            <div class="body-row-OneColumn">
+                <section class="boxTwoRow">
                     <div class="card-section">
+                        <img src="img/gym.jpg" class="imgStyle">
                         <h3>Ir al gimnasio</h3>
                         <p>
                         <h5>Ir al gimnasio para realizar hipertrofia de cierta manera para mi no es un pasatiempo,
@@ -41,23 +42,40 @@
                         </h5>
                         </p>
                     </div>
-                </div>
 
-            </section>
-            <section class="boxTwoRow">
-                <div class="cell medium-8" style="padding: 20px;">
-                    <h4>Mis metas a futuro las cuales voy a cumplir son:</h4>
-                    <p class="text-justify">
-                    <ul>
-                        <li>Voy a mejorar mi relación con Dios y ser una mejor persona, después de todo, Él es la máxima
-                        </li>>
-                    </ul>
-                    </p>
-                </div>
+                </section>
+                <section class="boxTwoRow">
+                    <div class="card-section">
+                        <img src="img/senderos.jpg" class="imgStyle">
+                        <h3>Ver series y anime</h3>
+                        <p>
+                        <h5>Ver series y anime en Netflix o en cualquier otra plataforma
+                            digital me parece entretenido , siento que la vida no es
+                            solamente estudiar y esclavizarse en el estudio. También
+                            debemos disfrutar de los pequeños momentos viviendo nuestra
+                            vida.Suelo ver series y anime cuando como.
+                        </h5>
+                        </p>
+                    </div>
 
-            </section>
+                </section>
+                <section class="boxTwoRow">
+                    <div class="card-section">
+                        <img src="img/senderos.jpg" class="imgStyle">
+                        <h3>Caminatas al aire libre</h3>
+                        <p>
+                        <h5>Hacer caminatas al aire libre es un pasatiempo que me
+                            libera de todos los problemas y del estrés. Siempre he
+                            sido fanatico de la naturaleza y la vegetación. Después
+                            de cada semestre siempre realizo una caminata para
+                            despejarme de todas la carga que tuve durante el curso lectivo
+                        </h5>
+                        </p>
+                    </div>
+                </section>
+            </div>
         </div>
-    </div>
+    </main>
     <footer id="footer-general">
 
         <h5>Andres Matarrita - 2023</h5>
