nuevo logo pagina

--- a/Proyecto Personal Website/pasatiempos.html
+++ b/Proyecto Personal Website/pasatiempos.html
@@ -46,7 +46,7 @@
                 </section>
                 <section class="boxTwoRow">
                     <div class="card-section">
-                        <img src="img/senderos.jpg" class="imgStyle">
+                        <img src="img/plataformas.jpg" class="imgStyle">
                         <h3>Ver series y anime</h3>
                         <p>
                         <h5>Ver series y anime en Netflix o en cualquier otra plataforma
