--- a/Proyecto Personal Website/index.html
+++ b/Proyecto Personal Website/index.html
@@ -9,16 +9,18 @@
 </head>
 
 <body>
-    <div class="content">
-        <div id="video-bg">
+    <nav class="content">
+        <nav id="video-bg">
             <video autoplay loop class="video background" muted plays-inline>
                 <source src="VideoBackground.mp4" type="video/mp4">
             </video>
-        </div>
+        </nav>
         <header>
             <nav class="top-menu">
                 <h1>Andrés Matarrita Miranda</h1>
                 <ul>
+                    <i class="bi bi-house"></i>
+
                     <li><a href="index.html"></i> Inicio</a></li>
                     <li><a href="misObjetivos.html">Mis Objetivos</a></li>
                     <li>
@@ -28,6 +30,7 @@
                     <li><a href="pasatiempos.html">Pasatiempos</a></li>
                     <li><a href="acercaDe.html">Acerca de</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
+                    
                 </ul>
             </nav>
         </header>
@@ -37,6 +40,7 @@
             <p>Primer Portafolio personalizado usando HTML,CSS y Bootstrap</p>
 
         </footer>
+    </nav>
 </body>
 
 </html>
