--- a/Proyecto Personal Website/misObjetivos.html
+++ b/Proyecto Personal Website/misObjetivos.html
@@ -31,7 +31,7 @@
         </div>
         <div class="body-row-OneColumn">
             <section class="boxOneRow">
-                
+                <div class="card-section">
                     <h4>Mis metas a futuro las cuales voy a cumplir son:</h4>
                     <p class="text-justify">
                     <ul>
@@ -46,6 +46,7 @@
                         <li>Quiero viajar y conocer muchos países junto a mi pareja.</li>
                     </ul>
                     </p>
+                    </div>
             </section>
         </div>
     </div>
