Pagina de acerca de completa

--- a/Proyecto Personal Website/acercaDe.html
+++ b/Proyecto Personal Website/acercaDe.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
-<html lang="es">
-
-</html>
 
 <head>
     <meta charset="UTF-8">
@@ -12,15 +9,6 @@
 </head>
 
 <body>
-    <main>
-
-        <nav id="video-bg">
-            <video autoplay loop class="video background" muted plays-inline>
-                <source src="VideoBackground.mp4" type="video/mp4">
-            </video>
-        </nav>
-        </nav>
-    </main>
     <header>
         <nav class="top-menu">
             <h1>Andrés Matarrita Miranda</h1>
@@ -47,10 +35,37 @@
 
             </ul>
     </header>
-    <footer id="footer-index">
+    <main>
+        <div id="body">
+            <h1 id="title">Acerca de este sitio</h1>
+            <div id="body-container">
+                <section id="acercaDe">
+                    <img src="img/gym.jpg" alt="Imagen para Gym" id="image-acercaDe">
+                    <section id="acercaDe-text">
+                        <p>
+                            Para este sitio web, se utilizó:
+                        <ul>
+                            <li>HTML5 y CSS para la creación.</li>
+                            <li>Bootstrap como framework frontend.</li>
+                            <li>Enfoque "Mobile First" para la adaptabilidad.</li>
+                            <li>Preprocesadores CSS para una organización eficiente.</li>
+                            <li>Separación de presentación y contenido para futuras modificaciones en el diseño gráfico.
+                            </li>
+                            <li>Metodología MaintainableCSS para un código CSS sostenible.</li>
+                            <li> Estrategia de diseño centrada en la experiencia del usuario.</li>
+                        </ul>
+                        </p>
+
+                    </section>
+                </section>
+
+            </div>
+        </div>
+    </main>
+    <footer id="footer-general">
 
         <h5>Andres Matarrita - 2023</h5>
-        <p>Primer Portafolio personalizado usando HTML,CSS y Bootstrap</p>
+
 
     </footer>
 </body>
