--- a/Proyecto Personal Website/misObjetivos.html
+++ b/Proyecto Personal Website/misObjetivos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrés Matarrita Miranda</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/menu-interactions.js"></script>
 </head>
 
 <body>
@@ -13,43 +13,55 @@
         <nav class="top-menu">
             <h1>Andrés Matarrita Miranda</h1>
             <ul>
-                <li><a href="index.html"></i> Inicio</a></li>
+                <li><a href="index.html" id="logo-style"><img alt="inicio"
+                            src="../Proyecto Personal Website/img/home_icon.png"></a></li>
                 <li><a href="misObjetivos.html">Mis Objetivos</a></li>
-                <li>
-                    <a href="#">Computación</a>
+                <li class="menu-item">
+                    <a class id="computacion" href="#">Computación</a>
+                    <span class="arrow"></span>
+                    <ul class="subMenu">
+                        <nav id="subMenu-Vertical">
+                            <li><a href="computacion.html">¿Por qué Computacion?</a></li>
+                            <li><a href="cursos.html">Cursos Preferidos</a></li>
+                            <li><a href="compañerosYProf.html">Mis Compañeros y Profesores</a></li>
+                            <li><a href="descargas.html">Descargas</a></li>
+                        </nav>
+                    </ul>
 
                 </li>
                 <li><a href="pasatiempos.html">Pasatiempos</a></li>
                 <li><a href="acercaDe.html">Acerca de</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+
             </ul>
-        </nav>
     </header>
-    <div class="body">
-        <div class="title">
-            <h1 class="title">Mis Objetivos</h1>
-        </div>
-        <div class="body-row-OneColumn">
-            <section class="boxOneRow">
-                <div class="card-section">
-                    <h4>Mis metas a futuro las cuales voy a cumplir son:</h4>
-                    <p class="text-justify">
-                    <ul>
-                        <li>Voy a mejorar mi relación con Dios y ser una mejor persona, después de todo, Él es la máxima
-                            prioridad.</li>
-                        <li>Quiero graduarme a más tardar el próximo año para dedicarme a trabajar y ya no tener que ir
-                            a la universidad y gastar tiempo en los viajes de ida y vuelta.</li>
-                        <li>Quiero conseguir un trabajo estable remoto donde no sea necesario trasladarse.</li>
-                        <li>Más a futuro, quiero comprar mi propia casa.</li>
-                        <li>Quiero casarme con mi novia dentro de unos muy pocos años.</li>
-                        <li>Quiero vivir en paz y tener una felicidad constante.</li>
-                        <li>Quiero viajar y conocer muchos países junto a mi pareja.</li>
-                    </ul>
-                    </p>
+    <main>
+        <div id="body">
+            <h1 id="title">Mis Objetivos</h1>
+            <div id="body-container">
+                <section id="misObjetivos">
+                    <div id="misObjetivos-text">
+                        <h4>Mis metas a futuro las cuales voy a cumplir son:</h4>
+                        <p>
+                        <ul>
+                            <li>Voy a mejorar mi relación con Dios y ser una mejor persona, después de todo, Él es la
+                                máxima
+                                prioridad.</li>
+                            <li>Quiero graduarme a más tardar el próximo año para dedicarme a trabajar y ya no tener que
+                                ir
+                                a la universidad y gastar tiempo en los viajes de ida y vuelta.</li>
+                            <li>Quiero conseguir un trabajo estable remoto donde no sea necesario trasladarse.</li>
+                            <li>Más a futuro, quiero comprar mi propia casa.</li>
+                            <li>Quiero casarme con mi novia dentro de unos muy pocos años.</li>
+                            <li>Quiero vivir en paz y tener una felicidad constante.</li>
+                            <li>Quiero viajar y conocer muchos países junto a mi pareja.</li>
+                        </ul>
+                        </p>
                     </div>
-            </section>
+                </section>
+            </div>
         </div>
-    </div>
+    </main>
     <footer id="footer-general">
 
         <h5>Andres Matarrita - 2023</h5>
