Nueva imagen de pagina acerca de

--- a/Proyecto Personal Website/acercaDe.html
+++ b/Proyecto Personal Website/acercaDe.html
@@ -40,7 +40,7 @@
             <h1 id="title">Acerca de este sitio</h1>
             <div id="body-container">
                 <section id="acercaDe">
-                    <img src="img/gym.jpg" alt="Imagen para Gym" id="image-acercaDe">
+                    <img src="img/atention.png" alt="Imagen para acerca de este sitio" id="image-acercaDe">
                     <section id="acercaDe-text">
                         <p>
                             Para este sitio web, se utilizó:
