Se modifican imagenes para una mejor estructura

--- a/Proyecto Personal Website/cursos.html
+++ b/Proyecto Personal Website/cursos.html
@@ -39,35 +39,52 @@
     <main>
         <div id="body">
             <div class="title">
-                <h1 id="title">Mis Pasatiempos</h1>
+                <h1 id="title">Mis Cursos Preferidos</h1>
             </div>
             <div id="body-container">
-                <section id="gym">
-                    <div id="gym-text">
-                        <img src="img/gym.jpg" alt="Imagen de gym" class="imgStyle">
-                        <h3>Ir al gimnasio</h3>
+                <section id="programacion">
+                    <div id="programacion-text">
+                        <img src="img/programacion1.jpg" alt="Imagen programación 1 y 2" class="imgStyle">
+                        <h3>Programación 1 y 2
+                        </h3>
                         <p>
-                        <h5>Ir al gimnasio para realizar hipertrofia de cierta manera para mi no es un pasatiempo,
-                            es algo que me encanta hacer 5 veces a la semana , llevo 6 años de hacerlo y es una de las
-                            mejores decisiones que he tomado para mi salud física y mental.
+                        <h5>Los cursos de Programación 1 y 2 con el profesor Edgar Casasola fueron mis favoritos.
+                            Mejoré mis habilidades en lógica de programación y dominé la sintaxis de lenguajes
+                            orientados a objetos como Java y C++. Estos cursos se centraron en el análisis de algoritmos
+                            y estructuras de datos de manera práctica.
                         </h5>
                         </p>
                     </div>
 
                 </section>
-                <section id="caminatas">
-                    <div id="caminatas-text">
-                        <img src="img/senderos.jpg" alt="Imagen de caminatas" class="imgStyle">
-                        <h3>Caminatas al aire libre</h3>
+                <section id="basesDeDatos">
+                    <div id="basesDeDatos-text">
+                        <img src="img/basesDeDatos.png" alt="Imagen de Bases de Datos" class="imgStyle">
+                        <h3>Bases de datos</h3>
                         <p>
-                        <h5>Hacer caminatas al aire libre es un pasatiempo que me
-                            libera de todos los problemas y del estrés. Siempre he
-                            sido fanatico de la naturaleza y la vegetación. Después
-                            de cada semestre siempre realizo una caminata para
-                            despejarme.
+                        <h5>Se aprendió acerca del diseño e implementacion de bases de datos relacionales 
+                            usando SQL Server.Además , se profundizó acerca de la normalización de
+                             las bases de datos para crear un diseño más óptimo y que se 
+                             elimine la duplicación de datos innecesaria. Otro de los temas que se aprendió
+                              fue acerca de la creación de consultas avanzadas , tigres , 
+                              funciones almacenadas y procedimientos .
                         </h5>
                         </p>
                     </div>
+                </section>
+                <section id="diseño">
+                    <div id="diseño-text">
+                        <img src="img/diseñoDeSoftware.png" alt="Imagen de diseño" class="imgStyle">
+                        <h3>Diseño de software</h3>
+                        <p>
+                        <h5>Un curso que centró en los patrones de diseño y arquitectónicos del 
+                            software.Se crearon programas y laboratorios resolviendo distintos problemas 
+                            complejos usando patrones ya documentados y comprobados. El proyecto final consistió 
+                            en crear un framework adaptable para juegos de mesas similares a Ludo.
+                        </h5>
+                        </p>
+                    </div>
+
                 </section>
                 <section id="series">
                     <div id="series-text">
