Nueva imagen diseño

--- a/Proyecto Personal Website/cursos.html
+++ b/Proyecto Personal Website/cursos.html
@@ -86,16 +86,16 @@
                     </div>
 
                 </section>
-                <section id="series">
-                    <div id="series-text">
-                        <img src="img/plataformas.jpg" alt="Imagen de series" class="imgStyle">
-                        <h3>Ver series y anime</h3>
+                <section id="paralela">
+                    <div id="paralela-text">
+                        <img src="../Proyecto Personal Website/paralelaYConcurrente.png" alt="Imagen de series" class="imgStyle">
+                        <h3>Ver  y anime</h3>
                         <p>
                         <h5>Ver series y anime en Netflix o en cualquier otra plataforma
                             digital me parece entretenido , siento que la vida no es
                             solamente estudiar y esclavizarse en el estudio. También
                             debemos disfrutar de los pequeños momentos viviendo nuestra
-                            vida.Suelo ver series y anime cuando como.
+                            vida.Suelo ver series y anime cuando como.afjkssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
                         </h5>
                         </p>
                     </div>
