Nueva imagen diseño

--- a/Proyecto Personal Website/cursos.html
+++ b/Proyecto Personal Website/cursos.html
@@ -74,7 +74,7 @@
                 </section>
                 <section id="diseño">
                     <div id="diseño-text">
-                        <img src="img/diseñoDeSoftware.png" alt="Imagen de diseño" class="imgStyle">
+                        <img src="img/softwareDiseño.webp" alt="Imagen de diseño" class="imgStyle">
                         <h3>Diseño de software</h3>
                         <p>
                         <h5>Un curso que centró en los patrones de diseño y arquitectónicos del 
@@ -88,7 +88,7 @@
                 </section>
                 <section id="paralela">
                     <div id="paralela-text">
-                        <img src="../Proyecto Personal Website/paralelaYConcurrente.png" alt="Imagen de series" class="imgStyle">
+                        <img src="img/softwareDiseño.webp" alt="Imagen de series" class="imgStyle">
                         <h3>Ver  y anime</h3>
                         <p>
                         <h5>Ver series y anime en Netflix o en cualquier otra plataforma
