Nueva imagen diseño

--- a/Proyecto Personal Website/cursos.html
+++ b/Proyecto Personal Website/cursos.html
@@ -86,16 +86,14 @@
                     </div>
 
                 </section>
-                <section id="paralela">
-                    <div id="paralela-text">
-                        <img src="img/softwareDiseño.webp" alt="Imagen de series" class="imgStyle">
-                        <h3>Ver  y anime</h3>
+                <section id="diseño">
+                    <div id="diseño-text">
+                        <img src="img/paralela.png" alt="Imagen de diseño" class="imgStyle">
+                        <h3>Diseño de software</h3>
                         <p>
-                        <h5>Ver series y anime en Netflix o en cualquier otra plataforma
-                            digital me parece entretenido , siento que la vida no es
-                            solamente estudiar y esclavizarse en el estudio. También
-                            debemos disfrutar de los pequeños momentos viviendo nuestra
-                            vida.Suelo ver series y anime cuando como.afjkssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+                        <h5>Un curso que centró en los patrones de diseño y arquitectónicos del 
+                            software.Se crearon programas y laboratorios resolviendo distintos problemas 
+                            complejos usando patrones ya documentados y comprobados. 
                         </h5>
                         </p>
                     </div>
