Nueva imagen diseño

--- a/Proyecto Personal Website/cursos.html
+++ b/Proyecto Personal Website/cursos.html
@@ -88,7 +88,7 @@
                 </section>
                 <section id="diseño">
                     <div id="diseño-text">
-                        <img src="img/paralela.png" alt="Imagen de diseño" class="imgStyle">
+                        <img src="img/concurrente.jpg" alt="Imagen de diseño" class="imgStyle">
                         <h3>Diseño de software</h3>
                         <p>
                         <h5>Un curso que centró en los patrones de diseño y arquitectónicos del 
