Se modifican imagenes para una mejor estructura

--- a/Proyecto Personal Website/cursos.html
+++ b/Proyecto Personal Website/cursos.html
@@ -68,6 +68,7 @@
                              elimine la duplicación de datos innecesaria. Otro de los temas que se aprendió
                               fue acerca de la creación de consultas avanzadas , tigres , 
                               funciones almacenadas y procedimientos .
+                              
                         </h5>
                         </p>
                     </div>
@@ -77,23 +78,25 @@
                         <img src="img/softwareDiseño.webp" alt="Imagen de diseño" class="imgStyle">
                         <h3>Diseño de software</h3>
                         <p>
-                        <h5>Un curso que centró en los patrones de diseño y arquitectónicos del 
-                            software.Se crearon programas y laboratorios resolviendo distintos problemas 
-                            complejos usando patrones ya documentados y comprobados. El proyecto final consistió 
-                            en crear un framework adaptable para juegos de mesas similares a Ludo.
+                        <h5>Se estudió el funcionamiento de los hilos de ejecución y la distribución 
+                            de carga entre ellos al realizar tareas con mucho procesamiento e información.
+                             Para esto fue necesario el aprendizaje de las condiciones de carrera, técnicas
+                              para evitar dichas condiciones tales como : semáforos y muelles.Además
+                               se desarrollaron proyectos  para sistemas distribuidos.
+                               
                         </h5>
                         </p>
                     </div>
 
                 </section>
-                <section id="diseño">
-                    <div id="diseño-text">
-                        <img src="img/concurrente.jpg" alt="Imagen de diseño" class="imgStyle">
+                <section id="paralela">
+                    <div id="paralela-text">
+                        <img src="img/concurrente.jpg" alt="Imagen de programacion paralela y concurrente" class="imgStyle">
                         <h3>Diseño de software</h3>
                         <p>
-                        <h5>Un curso que centró en los patrones de diseño y arquitectónicos del 
-                            software.Se crearon programas y laboratorios resolviendo distintos problemas 
-                            complejos usando patrones ya documentados y comprobados. 
+                        <h5>Un curso que se centró en los patrones de diseño del 
+                            software. Se crearon programas y laboratorios resolviendo distintos problemas 
+                            complejos usando patrones ya documentados y comprobados. También se abordaron aspectos como la creación de interfaces de usuario intuitivas y la planificación de la arquitectura de software escalable priorizando la efectividad.
                         </h5>
                         </p>
                     </div>
