--- a/Proyecto Personal Website/contacto.html
+++ b/Proyecto Personal Website/contacto.html
@@ -48,7 +48,7 @@
                                 <i class="fas fa-user"></i>&nbsp;&nbsp;<a>José Andrés Matarrita Miranda</a>
                                 <br>
                                 <br>
-                                <i class="far fa-envelope"></i>&nbsp;&nbsp;<a>andresmm1919@hotmail.com</a>
+                                <i class="far fa-envelope"></i>&nbsp;&nbsp;<a>andres1919@hotmail.com</a>
                                 <br>
                                 <br>
                                 <i class="fab fa-linkedin"></i>&nbsp;&nbsp;<a
