--- a/Proyecto Personal Website/cursos.html
+++ b/Proyecto Personal Website/cursos.html
@@ -45,13 +45,14 @@
                 <section id="programacion">
                     <div id="programacion-text">
                         <img src="img/programacion1.jpg" alt="Imagen programación 1 y 2" class="imgStyle">
+                        <br>
                         <h3>Programación 1 y 2
                         </h3>
                         <p>
-                        <h5>Los cursos de Programación 1 y 2 con el profesor Edgar Casasola fueron mis favoritos.
-                            Mejoré mis habilidades en lógica de programación y dominé la sintaxis de lenguajes
-                            orientados a objetos como Java y C++. Estos cursos se centraron en el análisis de algoritmos
-                            y estructuras de datos de manera práctica.
+                        <h5>Los cursos de Programación 1 y 2, impartidos por el profesor Edgar Casasola,
+                             se destacaron para mí. Mejoré mis habilidades en lógica de programación y dominé 
+                             la sintaxis de lenguajes orientados a objetos como Java y C++. Estos cursos 
+                             se enfocaron en el análisis de algoritmos y estructuras de datos de manera práctica.
                         </h5>
                         </p>
                     </div>
@@ -65,9 +66,7 @@
                         <h5>Se aprendió acerca del diseño e implementacion de bases de datos relacionales 
                             usando SQL Server.Además , se profundizó acerca de la normalización de
                              las bases de datos para crear un diseño más óptimo y que se 
-                             elimine la duplicación de datos innecesaria. Otro de los temas que se aprendió
-                              fue acerca de la creación de consultas avanzadas , tigres , 
-                              funciones almacenadas y procedimientos .
+                             elimine la duplicación de datos innecesaria. Se profundizó en consultas avanzadas y tigres.
                               
                         </h5>
                         </p>
@@ -75,14 +74,14 @@
                 </section>
                 <section id="diseño">
                     <div id="diseño-text">
-                        <img src="img/softwareDiseño.webp" alt="Imagen de diseño" class="imgStyle">
-                        <h3>Diseño de software</h3>
+                        <img src="img/concurrente.jpg" alt="Imagen de programacion paralela y concurrente" class="imgStyle">
+                        <h3>Paralela y concurrente</h3>
                         <p>
                         <h5>Se estudió el funcionamiento de los hilos de ejecución y la distribución 
                             de carga entre ellos al realizar tareas con mucho procesamiento e información.
                              Para esto fue necesario el aprendizaje de las condiciones de carrera, técnicas
-                              para evitar dichas condiciones tales como : semáforos y muelles.Además
-                               se desarrollaron proyectos  para sistemas distribuidos.
+                              para evitar dichas condiciones tales como : semáforos y mutex.Además
+                               se  sistemas distribuidos.
                                
                         </h5>
                         </p>
@@ -91,12 +90,14 @@
                 </section>
                 <section id="paralela">
                     <div id="paralela-text">
-                        <img src="img/concurrente.jpg" alt="Imagen de programacion paralela y concurrente" class="imgStyle">
+                        <img src="img/softwareDiseño.webp" alt="Imagen de diseño" class="imgStyle">
                         <h3>Diseño de software</h3>
                         <p>
                         <h5>Un curso que se centró en los patrones de diseño del 
                             software. Se crearon programas y laboratorios resolviendo distintos problemas 
-                            complejos usando patrones ya documentados y comprobados. También se abordaron aspectos como la creación de interfaces de usuario intuitivas y la planificación de la arquitectura de software escalable priorizando la efectividad.
+                            complejos usando patrones  ya comprobados. También se abordaron 
+                            aspectos como la creación de interfaces de usuario intuitivas y la planificación 
+                            de la arquitectura de software escalable.
                         </h5>
                         </p>
                     </div>
