--- a/Proyecto Personal Website/compañerosYProf.html
+++ b/Proyecto Personal Website/compañerosYProf.html
@@ -40,7 +40,7 @@
             <h1 id="title">Mis Compañeros</h1>
             <div id="body-container">
                 <section id="acercaDe">
-                    <img src="img/atention.png" alt="Imagen para acerca de este sitio" id="image-acercaDe">
+                    <img src="img/compañeros.png" alt="Imagen de compañeros" id="image-acercaDe">
                     <section id="acercaDe-text">
                         <p>
                             <h5>Algunos de los compañeros con los que más he socializado durante la universidad son:</h5>
